# task-manager-django

./: .coverage  .env  .gitignore  Dockerfile  Makefile  README  README.md  conftest.py  docker-compose.ci.yml  docker-compose.yml  newrelic.ini  pyproject.toml
.github/workflows/: main.yml
task_manager/: celery.py  log_utils.py  settings.py  urls.py
task_manager/main/: admin.py  apps.py  permissions.py  serializers.py  tasks.py  validators.py  views.py
task_manager/main/migrations/: 0001_initial.py  0002_alter_user_role.py  0002_tag_user_name_user_role_user_surname_and_more.py  0003_alter_task_status.py  0003_alter_user_name_alter_user_surname.py  0004_alter_user_name_alter_user_surname.py  0005_user_date_of_birth_user_phone.py  0006_alter_user_email.py  0007_user_avatar_picture.py  0008_alter_user_avatar_picture.py
task_manager/main/models/: __init__.py  tag.py  task.py  user.py
task_manager/main/services/: async_celery.py  mail.py  single_resource.py  storage_backends.py
task_manager/main/templates/emails/: base.html  notification.html
task_manager/main/test/: base.py  test_admin.py  test_countdown.py  test_current_user.py  test_mail_service.py  test_simple_jwt.py  test_tag.py  test_task.py  test_task_tags.py  test_user.py  test_user_tasks.py
task_manager/main/test/django_test_settings/: test_settings.py
task_manager/main/test/factories/: base.py  user.py
